# multi-agent-user-story-development

./: .env.template  .gitignore  LICENSE  MANIFEST.in  MARKETPLACE.md  README.md  plugin.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.claude/: CLAUDE.md  settings.json
.claude-plugin/: marketplace.json
.claude/hooks/: README.md  combined-prompt-hook.sh
.claude/skills/: MIGRATION_SUMMARY.md  README.md  azure-devops.md  skill-rules.json  wiki-auto-documenter.md
.claude/skills/azure-devops/scripts/: ado_pr_helper.py  wiki_bulk_publisher.py  wiki_publisher.py
.claude/skills/mcp-code-execution/: ADDING_MCP_SERVERS.md  QUICK_START.md
.claude/skills/mcp-code-execution/examples/: servers.json  usage_example.py
.claude/skills/mcp-code-execution/mcp_configs/: registry.json
.claude/skills/mcp-code-execution/references/: patterns.md
.claude/skills/mcp-code-execution/scripts/: ado_pr_helper.py  ado_wiki_updater.py  mcp_client.py  mcp_generator.py  tool_discovery.py
.claude/skills/multi-agent-orchestration/: EXAMPLE_TASKS.md  INDEX.md  PATTERNS.md  README.md
.claude/skills/multi-agent-orchestration/references/: implementation-guide.md  patterns.md
.claude/skills/multi-agent-orchestration/scripts/: examples.py  orchestrator.py
.claude/skills/schema-reference/references/: business_logic_patterns.md  schema_mapping_conventions.md
.claude/skills/schema-reference/scripts/: extract_data_dictionary.py  query_duckdb_schema.py  schema_comparison.py
.claude/skills/wiki-auto-documenter/assets/: mark-down-style-sheet.md
.claude/skills/wiki-auto-documenter/references/: documentation_templates.md  wiki_api_reference.md
.claude/skills/wiki-auto-documenter/scripts/: ado_wiki_client.py  code_analyzer.py  wiki_hierarchy_builder.py
multi_agent_user_story_development/: __init__.py  config.py  orchestrator.py
multi_agent_user_story_development/auth/: __init__.py  azure.py
multi_agent_user_story_development/mcp/: __init__.py  server.py  tools.py
multi_agent_user_story_development/prompts/: __init__.py  business_analyst.py  pyspark_engineer.py
tests/: README.md  conftest.py  test_auth.py  test_config.py  test_mcp_tools.py  test_memory.py  test_orchestrator.py  test_prompts.py
